y.output
Grammar

    0 $accept: program $end

    1 program: statements
    2        | /* empty */

    3 statements: statement ';' statements
    4           | statement ';'

    5 statement: expr
    6          | ID ':' type '=' statement
    7          | ID '=' statement
    8          | PRINT '(' expr ')'

    9 @1: /* empty */

   10 @2: /* empty */

   11 statement: BLOCK '{' @1 stmt_block @2 '}'
   12          | IF '(' expr ')' '{' statements '}' else
   13          | WHILE '(' expr ')' '{' statements '}'

   14 else: ELIF '(' expr ')' '{' statements '}' else
   15     | ELSE '{' statements '}'
   16     | /* empty */

   17 stmt_block: statements
   18           | statements RETURN expr ';'
   19           | RETURN expr ';'

   20 type: INT
   21     | REAL
   22     | STRING
   23     | BOOLEAN

   24 expr: '(' expr ')'
   25     | expr '+' expr
   26     | expr '-' expr
   27     | expr '*' expr
   28     | expr '/' expr
   29     | expr '^' expr
   30     | expr '!'
   31     | '-' expr
   32     | expr '.' expr
   33     | expr '|' expr
   34     | LOG '(' expr ',' expr ')'
   35     | LN '(' expr ')'
   36     | LOG10 '(' expr ')'
   37     | SQRT '(' expr ')'
   38     | SIN '(' expr ')'
   39     | COS '(' expr ')'
   40     | TAN '(' expr ')'
   41     | expr GT expr
   42     | expr LT expr
   43     | expr GE expr
   44     | expr LE expr
   45     | expr EQ expr
   46     | expr NE expr
   47     | INT_VAL
   48     | REAL_VAL
   49     | BOOLEAN_VAL
   50     | STRING_VAL
   51     | ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 30
'(' (40) 8 12 13 14 24 34 35 36 37 38 39 40
')' (41) 8 12 13 14 24 34 35 36 37 38 39 40
'*' (42) 27
'+' (43) 25
',' (44) 34
'-' (45) 26 31
'.' (46) 32
'/' (47) 28
':' (58) 6
';' (59) 3 4 18 19
'=' (61) 6 7
'^' (94) 29
'{' (123) 11 12 13 14 15
'|' (124) 33
'}' (125) 11 12 13 14 15
error (256)
INT_VAL (258) 47
REAL_VAL (259) 48
BOOLEAN_VAL (260) 49
STRING_VAL (261) 50
ID (262) 6 7 51
PRINT (263) 8
BLOCK (264) 11
RETURN (265) 18 19
IF (266) 12
ELSE (267) 15
ELIF (268) 14
WHILE (269) 13
INT (270) 20
REAL (271) 21
BOOLEAN (272) 23
STRING (273) 22
LN (274) 35
LOG (275) 34
LOG10 (276) 36
SQRT (277) 37
GT (278) 41
LT (279) 42
GE (280) 43
LE (281) 44
EQ (282) 45
NE (283) 46
TAN (284) 40
COS (285) 39
SIN (286) 38
UMINUS (287)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0
statements (51)
    on left: 3 4, on right: 1 3 12 13 14 15 17 18
statement (52)
    on left: 5 6 7 8 11 12 13, on right: 3 4 6 7
@1 (53)
    on left: 9, on right: 11
@2 (54)
    on left: 10, on right: 11
else (55)
    on left: 14 15 16, on right: 12 14
stmt_block (56)
    on left: 17 18 19, on right: 11
type (57)
    on left: 20 21 22 23, on right: 6
expr (58)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 50 51, on right: 5 8 12 13 14 18 19 24
    25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46


state 0

    0 $accept: . program $end

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 5
    PRINT        shift, and go to state 6
    BLOCK        shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    $default  reduce using rule 2 (program)

    program     go to state 19
    statements  go to state 20
    statement   go to state 21
    expr        go to state 22


state 1

   47 expr: INT_VAL .

    $default  reduce using rule 47 (expr)


state 2

   48 expr: REAL_VAL .

    $default  reduce using rule 48 (expr)


state 3

   49 expr: BOOLEAN_VAL .

    $default  reduce using rule 49 (expr)


state 4

   50 expr: STRING_VAL .

    $default  reduce using rule 50 (expr)


state 5

    6 statement: ID . ':' type '=' statement
    7          | ID . '=' statement
   51 expr: ID .

    ':'  shift, and go to state 23
    '='  shift, and go to state 24

    $default  reduce using rule 51 (expr)


state 6

    8 statement: PRINT . '(' expr ')'

    '('  shift, and go to state 25


state 7

   11 statement: BLOCK . '{' @1 stmt_block @2 '}'

    '{'  shift, and go to state 26


state 8

   12 statement: IF . '(' expr ')' '{' statements '}' else

    '('  shift, and go to state 27


state 9

   13 statement: WHILE . '(' expr ')' '{' statements '}'

    '('  shift, and go to state 28


state 10

   35 expr: LN . '(' expr ')'

    '('  shift, and go to state 29


state 11

   34 expr: LOG . '(' expr ',' expr ')'

    '('  shift, and go to state 30


state 12

   36 expr: LOG10 . '(' expr ')'

    '('  shift, and go to state 31


state 13

   37 expr: SQRT . '(' expr ')'

    '('  shift, and go to state 32


state 14

   31 expr: '-' . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 34


state 15

   40 expr: TAN . '(' expr ')'

    '('  shift, and go to state 35


state 16

   39 expr: COS . '(' expr ')'

    '('  shift, and go to state 36


state 17

   38 expr: SIN . '(' expr ')'

    '('  shift, and go to state 37


state 18

   24 expr: '(' . expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 38


state 19

    0 $accept: program . $end

    $end  shift, and go to state 39


state 20

    1 program: statements .

    $default  reduce using rule 1 (program)


state 21

    3 statements: statement . ';' statements
    4           | statement . ';'

    ';'  shift, and go to state 40


state 22

    5 statement: expr .
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   32     | expr . '.' expr
   33     | expr . '|' expr
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    GT   shift, and go to state 41
    LT   shift, and go to state 42
    GE   shift, and go to state 43
    LE   shift, and go to state 44
    EQ   shift, and go to state 45
    NE   shift, and go to state 46
    '-'  shift, and go to state 47
    '+'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    '!'  shift, and go to state 52
    '.'  shift, and go to state 53
    '|'  shift, and go to state 54

    $default  reduce using rule 5 (statement)


state 23

    6 statement: ID ':' . type '=' statement

    INT      shift, and go to state 55
    REAL     shift, and go to state 56
    BOOLEAN  shift, and go to state 57
    STRING   shift, and go to state 58

    type  go to state 59


state 24

    7 statement: ID '=' . statement

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 5
    PRINT        shift, and go to state 6
    BLOCK        shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    statement  go to state 60
    expr       go to state 22


state 25

    8 statement: PRINT '(' . expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 61


state 26

   11 statement: BLOCK '{' . @1 stmt_block @2 '}'

    $default  reduce using rule 9 (@1)

    @1  go to state 62


state 27

   12 statement: IF '(' . expr ')' '{' statements '}' else

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 63


state 28

   13 statement: WHILE '(' . expr ')' '{' statements '}'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 64


state 29

   35 expr: LN '(' . expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 65


state 30

   34 expr: LOG '(' . expr ',' expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 66


state 31

   36 expr: LOG10 '(' . expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 67


state 32

   37 expr: SQRT '(' . expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 68


state 33

   51 expr: ID .

    $default  reduce using rule 51 (expr)


state 34

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   31     | '-' expr .
   32     | expr . '.' expr
   33     | expr . '|' expr
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    $default  reduce using rule 31 (expr)


state 35

   40 expr: TAN '(' . expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 69


state 36

   39 expr: COS '(' . expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 70


state 37

   38 expr: SIN '(' . expr ')'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 71


state 38

   24 expr: '(' expr . ')'
   25     | expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   32     | expr . '.' expr
   33     | expr . '|' expr
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    GT   shift, and go to state 41
    LT   shift, and go to state 42
    GE   shift, and go to state 43
    LE   shift, and go to state 44
    EQ   shift, and go to state 45
    NE   shift, and go to state 46
    '-'  shift, and go to state 47
    '+'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    '!'  shift, and go to state 52
    '.'  shift, and go to state 53
    '|'  shift, and go to state 54
    ')'  shift, and go to state 72


state 39

    0 $accept: program $end .

    $default  accept


state 40

    3 statements: statement ';' . statements
    4           | statement ';' .

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 5
    PRINT        shift, and go to state 6
    BLOCK        shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    $default  reduce using rule 4 (statements)

    statements  go to state 73
    statement   go to state 21
    expr        go to state 22


state 41

   41 expr: expr GT . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 74


state 42

   42 expr: expr LT . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 75


state 43

   43 expr: expr GE . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 76


state 44

   44 expr: expr LE . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 77


state 45

   45 expr: expr EQ . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 78


state 46

   46 expr: expr NE . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 79


state 47

   26 expr: expr '-' . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 80


state 48

   25 expr: expr '+' . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 81


state 49

   27 expr: expr '*' . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 82


state 50

   28 expr: expr '/' . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 83


state 51

   29 expr: expr '^' . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 84


state 52

   30 expr: expr '!' .

    $default  reduce using rule 30 (expr)


state 53

   32 expr: expr '.' . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 85


state 54

   33 expr: expr '|' . expr

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 33
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    expr  go to state 86


state 55

   20 type: INT .

    $default  reduce using rule 20 (type)


state 56

   21 type: REAL .

    $default  reduce using rule 21 (type)


state 57

   23 type: BOOLEAN .

    $default  reduce using rule 23 (type)


state 58

   22 type: STRING .

    $default  reduce using rule 22 (type)


state 59

    6 statement: ID ':' type . '=' statement

    '='  shift, and go to state 87


state 60

    7 statement: ID '=' statement .

    $default  reduce using rule 7 (statement)


state 61

    8 statement: PRINT '(' expr . ')'
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   32     | expr . '.' expr
   33     | expr . '|' expr
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    GT   shift, and go to state 41
    LT   shift, and go to state 42
    GE   shift, and go to state 43
    LE   shift, and go to state 44
    EQ   shift, and go to state 45
    NE   shift, and go to state 46
    '-'  shift, and go to state 47
    '+'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    '!'  shift, and go to state 52
    '.'  shift, and go to state 53
    '|'  shift, and go to state 54
    ')'  shift, and go to state 88


state 62

   11 statement: BLOCK '{' @1 . stmt_block @2 '}'

    INT_VAL      shift, and go to state 1
    REAL_VAL     shift, and go to state 2
    BOOLEAN_VAL  shift, and go to state 3
    STRING_VAL   shift, and go to state 4
    ID           shift, and go to state 5
    PRINT        shift, and go to state 6
    BLOCK        shift, and go to state 7
    RETURN       shift, and go to state 89
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    LN           shift, and go to state 10
    LOG          shift, and go to state 11
    LOG10        shift, and go to state 12
    SQRT         shift, and go to state 13
    '-'          shift, and go to state 14
    TAN          shift, and go to state 15
    COS          shift, and go to state 16
    SIN          shift, and go to state 17
    '('          shift, and go to state 18

    statements  go to state 90
    statement   go to state 21
    stmt_block  go to state 91
    expr        go to state 22


state 63

   12 statement: IF '(' expr . ')' '{' statements '}' else
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   32     | expr . '.' expr
   33     | expr . '|' expr
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    GT   shift, and go to state 41
    LT   shift, and go to state 42
    GE   shift, and go to state 43
    LE   shift, and go to state 44
    EQ   shift, and go to state 45
    NE   shift, and go to state 46
    '-'  shift, and go to state 47
    '+'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    '!'  shift, and go to state 52
    '.'  shift, and go to state 53
    '|'  shift, and go to state 54
    ')'  shift, and go to state 92


state 64

   13 statement: WHILE '(' expr . ')' '{' statements '}'
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   32     | expr . '.' expr
   33     | expr . '|' expr
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    GT   shift, and go to state 41
    LT   shift, and go to state 42
    GE   shift, and go to state 43
    LE   shift, and go to state 44
    EQ   shift, and go to state 45
    NE   shift, and go to state 46
    '-'  shift, and go to state 47
    '+'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    '!'  shift, and go to state 52
    '.'  shift, and go to state 53
    '|'  shift, and go to state 54
    ')'  shift, and go to state 93


state 65

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   32     | expr . '.' expr
   33     | expr . '|' expr
   35     | LN '(' expr . ')'
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    GT   shift, and go to state 41
    LT   shift, and go to state 42
    GE   shift, and go to state 43
    LE   shift, and go to state 44
    EQ   shift, and go to state 45
    NE   shift, and go to state 46
    '-'  shift, and go to state 47
    '+'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    '!'  shift, and go to state 52
    '.'  shift, and go to state 53
    '|'  shift, and go to state 54
    ')'  shift, and go to state 94


state 66

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   32     | expr . '.' expr
   33     | expr . '|' expr
   34     | LOG '(' expr . ',' expr ')'
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    GT   shift, and go to state 41
    LT   shift, and go to state 42
    GE   shift, and go to state 43
    LE   shift, and go to state 44
    EQ   shift, and go to state 45
    NE   shift, and go to state 46
    '-'  shift, and go to state 47
    '+'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    '!'  shift, and go to state 52
    '.'  shift, and go to state 53
    '|'  shift, and go to state 54
    ','  shift, and go to state 95


state 67

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . '^' expr
   30     | expr . '!'
   32     | expr . '.' expr
   33     | expr . '|' expr
   36     | LOG10 '(' expr . ')'
   41     | expr . GT expr
   42     | expr . LT expr
   43     | expr . GE expr
   44     | expr . LE expr
   45     | expr . EQ expr
   46     | expr . NE expr

    GT   shift, and go to state 41
    LT   shift, and go to state 42
    GE   shift, and go to state 43
    LE   shift, and go to state 44
    EQ   shift, and go to state 45
    NE   shift, and go to state 46
    '-'  shift, and go to state 47
    '+'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    '!'  shift, and go to state 52
    '.'  shift, and go to state 53
    '|'  shift, and go to state 54
    ')'  shift, and go to state 96


state 68
